# cc-cost

./: .gitignore  LICENSE  README.md  article-1.md  install.sh  pyproject.toml  run.py
.claude-plugin/: plugin.json
cc_cost/: __init__.py  __main__.py  main.py
skills/cc-cost/: SKILL.md
